[gradle][IDEA-387569] Mark inspection visitors/fixes as internal, apply some inspection suggestions, cosmetic changes
GitOrigin-RevId: c960e01f69509113313d549338ea62361c99234a